@@ -53,4 +53,3 @@ local::lib = <1.006008
 [Prereqs]
 ExtUtils::Builder::ParseXS = 0
 ExtUtils::Builder::Compiler = 0.028
-CPAN::Requirements::Dynamic = 0.002
