@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Move Dist::Build::DynamicPrereqs to a separate dist
           - Embed File::ShareDir::Tiny into Dist::Build::Util
           - Adapt to split_like_shell now being in ExtUtils::Builder::Util
           - Add external argument alias to Alien
